# system-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: mainwindow.h  ota_manager.h  system_monitor.h  version.h.in
src/: main.cpp  mainwindow.cpp  ota_manager.cpp  system_monitor.cpp
